axion-manifests/telemetry/telemetry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-svc
  labels:
    app: telemetry

spec:
  type: ClusterIP
  selector:
    app: telemetry
    
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
