axion-manifests/telemetry/telemetry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telemetry-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/dashboard/summary"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
      
spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: dev.manish.theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-svc
                port:
                  number: 80
